# plugin-js

./: .envrc  .gitignore  CMakeLists.txt  Makefile  README.md  componentize.sh.in  flake.nix  justfile
.github/workflows/: publish-oci.yml
builtins/gams/: host.cpp  host.h
cmake/: build-crates.cmake  builtins.cmake  wasi-sdk.cmake
host-apis/lite/: host_api.cmake  host_api.cpp
host-apis/lite/bindings/: bindings.c  bindings.h
host-apis/lite/include/: host_api.h
host-apis/lite/wit/: world.wit
host-apis/my-minimal/: host_api.cmake  host_api.cpp  wasi_shim.cpp
host-apis/my-minimal/bindings/: js_plugin.c  js_plugin.h  starling_lite.c  starling_lite.h
host-apis/my-minimal/include/: host_api.h
host-apis/my-minimal/wit/: world.wit
runtime/: engine.cpp  js.cpp
tests/wpt-harness/: wpt.cmake
